--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#allows us to interact with the database 
+spring.h2.console.enabled=true
+
+spring.h2.console.path=/console
+
+#allows us to bring in data from an external sql resource to add to the database.
+spring.datasource.platform=h2 
+
+#Link to external file for database
+spring.datasource.url=jdbc:h2:file:~/Desktop/TTS_FTCI/NOV05/weatherapp/zipList
+spring.jpa.hibernate.ddl-auto=update
+
 api_key = 859d899bc999ae7413b2c031fe53ee47
